--- a/notebooks/0.0 Course Title and Information.ipynb
+++ b/notebooks/0.0 Course Title and Information.ipynb
@@ -49,8 +49,9 @@
     "<li>Python Programming Basics\n",
     "<li>Python – Numpy, SciPy\n",
     "<li>Python - Pandas\n",
-    "<li>Sample Data Sets 1 and Data Preprocessing\n",
+    "<li>Python - Pandas\n",
     "<li>Python – Matplotlib\n",
+    "<li>Sample Data Sets 1 and Data Preprocessing\n",
     "<li>Modeling\n",
     "<li>Modeling\n",
     "<li>R, RStudio, CRAN\n",
@@ -89,5 +90,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
