--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -45,56 +45,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\GitHub\\ToolsForDataAnalyticsAndModeling\\notebooks\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
+    "# To remember this, think \"get current working directory.\"  This is the base\n",
+    "# directory that will be used when looking for files.\n",
     "print(os.getcwd())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (\"Hello World!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] Hello World!\n",
-      "[2] Hello World!\n",
-      "[3] Hello World!\n",
-      "[4] Hello World!\n",
-      "[5] Hello World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Unlike many languages that use {} and other start/end identifers\n",
     "#   to identify blocks, Python uses intention.  \n",
@@ -105,26 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n",
-      "11\n",
-      "13\n",
-      "15\n",
-      "17\n",
-      "19\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(20):\n",
     "    if i % 2:\n",
@@ -609,5 +566,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
