--- a/notebooks/1.2 Truth Values and Boolean Tests.ipynb
+++ b/notebooks/1.2 Truth Values and Boolean Tests.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# 1.2 Truth Values and Boolean Tests\n",
     "\n",
-    "Note - previous classes have struggled with this material.  It's important and can be confusing at first.  These concepts are critical for *decision-making* -- Primary *selection* mechanism and *repetition* control (i.e., loop conditions).\n",
-    "\n",
-    "See http://jsmith.co/node/252 for a video module based on this notebook."
+    "Note - previous classes have struggled with this material.  It's important and can be confusing at first.  These concepts are critical for *decision-making* -- Primary *selection* mechanism and *repetition* control (i.e., loop conditions).\n"
    ]
   },
   {
