--- a/notebooks/DataReading Example.ipynb
+++ b/notebooks/DataReading Example.ipynb
@@ -7,7 +7,7 @@
     "# Foreign Exchange Rate Dataset File Reading\n",
     "Datafile: \"14_Foreign_Exchange_Rates_PureNumeric.csv.csv\"\n",
     "\n",
-    "Developed by Jingwei Liu (2020-08-29)\n"
+    "Originally developed by Jingwei Liu (2020-08-29)\n"
    ]
   },
   {
@@ -67,14 +67,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now, let's read the data set into a list of lists using different programming codes"
+    "### Now, let's read the data set into a list of lists using different Python methods"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One thing you should know is , each element in the list of lists is stored <font color = \"red\">**as string**</font>. (even it is a number)"
+    "One thing you should know is , each element in the list of lists is stored <font color = \"red\">**as string**</font>. (even it is a number)."
    ]
   },
   {
@@ -262,9 +262,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
