--- a/notebooks/1.3 Sets, Tuples, Functions, Files.ipynb
+++ b/notebooks/1.3 Sets, Tuples, Functions, Files.ipynb
@@ -278,6 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make sure that you uderstand the file path notation -- ../data means \"go up one level, then go to\n",
+    "# the data directory from that location\" - this is a relative path.\n",
     "f = open('../data/data.txt', 'r')\n",
     "print (f, type(f))\n",
     "f.close()"
@@ -447,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
