--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -542,8 +542,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Notice that format() creates a string whereas round \"keeps\" the float.\n",
     "type(\"{:.4f}\".format(math.pi)), type(round(math.pi,4))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
