Tweaks to demo Git
Wording changes to show how Git shows updates.

--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Introduction to Lists\n",
-    "Lists are *sequences* of objects.  A *sequence* is a \"positionally ordered collection of other objects.\"  Lists can include any types of Python objects (and do not need to be homogeneous)."
+    "Lists are *sequences* of objects.  A *sequence* is a \"positionally ordered collection of other objects.\"  Lists can include any types of Python objects (and do not need to be homogeneous - i.e., object types can be different in the same list)."
    ]
   },
   {
