--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -33,7 +33,7 @@
     "<li />Matplotlib and Seaborn\n",
     "<li />Scikit-learn\n",
     "</ul>\n",
-    "In addition, we will also learn how to create and use our own modules."
+    "In addition, we will also learn how to create and use our own modules (in a limited way)."
    ]
   },
   {
@@ -570,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
