--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -33,7 +33,7 @@
     "<li />Matplotlib and Seaborn\n",
     "<li />Scikit-learn\n",
     "</ul>\n",
-    "In addition, we will also learn how to create and use our own modules (in a limited way)."
+    "In addition, we will also learn how to create and use our own modules."
    ]
   },
   {
@@ -307,6 +307,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Numbers (pseudo-random, technically)\n",
+    "import random\n",
+    "for j in range(10):\n",
+    "    print(random.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(random)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# simulating 10 rolls of a fair die.\n",
+    "for j in range(10):\n",
+    "    print(random.choice(list(range(1,7))))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -389,8 +421,8 @@
    "source": [
     "# If the intial number is blank, start at the front,\n",
     "#   if the second is blank, go to the end.\n",
-    "#s[:3]\n",
-    "s[3:]"
+    "s[:3]\n",
+    "#s[3:]"
    ]
   },
   {
