--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "# Define a list and then show the list.  Note that the list contains objects of \n",
     "# different types (ints, floats, strings).\n",
-    "l1 = [1, 2, 3, 17.24, 967, 45, \"dog\", 'cat', [1, 2, 3]]\n",
+    "l1 = [1, 2, 3, 17.24, 967, 45, \"dog\", 'cat', [1, 2, 3], {'one':1, 'two':2}]\n",
     "l1"
    ]
   },
@@ -977,5 +977,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
