Update 1.1 Python Lists and Dictionaries.ipynb
Updates to add a few more examples and comments.

--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -328,6 +328,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# syntax: range([start], stop [, step])\n",
+    "# the brackets mean that start and step are optional arguments\n",
     "r = range(10)\n",
     "r, list(r)"
    ]
@@ -428,6 +430,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Or in more familar matrix form:\n",
+    "for r in m:\n",
+    "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# To extract the third row (as a list)\n",
     "m[2]"
    ]
@@ -498,6 +511,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# or\n",
+    "c = [m[i][2] for i in range(len(m))]\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# to extract the diagonal (upper left to lower right)\n",
     "[m[i][i] for i in [0, 1, 2]]"
    ]
@@ -521,6 +545,16 @@
     "# even elements of the second column\n",
     "[r[1] for r in m if r[1] % 2 == 0]\n",
     "# added an \"if condition\" to the comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# odd elements of the second column\n",
+    "[r[1] for r in m if r[1] % 2]"
    ]
   },
   {
@@ -592,6 +626,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Slide 16 of 03 Introduction to Python.pptx\n",
+    "#\n",
     "# creating a list to define a person\n",
     "person = [\"Tom Howard\", 54, 6.0]\n",
     "\n",
@@ -712,11 +748,27 @@
     "# see the progress.\n",
     "# max age\n",
     "ages =[p[1] for p in people] \n",
-    "max(ages)\n",
+    "max(ages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# which is max? - 62\n",
-    "#ages.index(62)\n",
+    "ages.index(62)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# who - person 4\n",
-    "#people[4][0]"
+    "people[4][0]"
    ]
   },
   {
@@ -745,7 +797,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Supposed that we had defined variaables to store the \"column numbers\" -- the\n",
+    "# Supposed that we had defined variables to store the \"column numbers\" -- the\n",
     "#  indices into the internal lists for the given data items\n",
     "name   = 0\n",
     "age    = 1\n",
