--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -596,7 +596,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Suppose you'd like to estimate the probability of rolling a '7' ...\n",
@@ -1006,6 +1008,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Scores on the final exam using a comprehension\n",
+    "fe = [students[k]['FinalExam'] for k in students]\n",
+    "fe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# average score\n",
+    "sum(fe)/len(students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All together\n",
+    "sum([students[k]['FinalExam'] for k in students])/len(students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Human-friendly\n",
+    "\"The average score on the final exam (for {:} students) is {:.1f}\".format(\n",
+    "    len(students), sum([students[k]['FinalExam'] for k in students])/len(students))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -1025,7 +1069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
