Update 1.3 Sets, Tuples, Functions, Files.ipynb
Fixed a couple of typos and added a simple function call example.

--- a/notebooks/1.3 Sets, Tuples, Functions, Files.ipynb
+++ b/notebooks/1.3 Sets, Tuples, Functions, Files.ipynb
@@ -182,7 +182,7 @@
    "source": [
     "## Functions\n",
     "\n",
-    "A funcation accepts an optional list of parameters, does something, and retuns an optional list of objects."
+    "A funcation accepts an optional list of arguements, does something, and optionally returns a list of objects."
    ]
   },
   {
@@ -236,6 +236,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "l = [1, 2, 3, 4, 5, 6]\n",
+    "mean(l), std_dev(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Human-friendly\n",
     "l = [1, 2, 3, 4, 5, 6]\n",
     "print(\"The average is {:.2f} and the standard deviation is {:.2f}\".format(mean(l), std_dev(l)))\n",
     "\n",
