Added tweaks and comments
Added a method to find the max() age people if there are more than 1 (response to a student's question).

--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -813,6 +813,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What if multiple people have the same min/max age?\n",
+    "people = [\n",
+    "    [\"Tom Howard\",          19,  6.0],\n",
+    "    [\"Jane Grimm\",          19,  4.9],\n",
+    "    [\"Sam Brown\",           25,  6.2],\n",
+    "    [\"Sarah Joan Spade\",    26, 5.25],\n",
+    "    [\"Blaine Jones\",        62,  5.8],\n",
+    "    [\"Devin Callahan\",      62, 5.92],\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Our previous statement:\n",
+    "people[[p[1] for p in people].index(max([p[1] for p in people]))][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Only finds one of the two.  Why and which one?\n",
+    "people.index?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Need something that supports multiple occurences.  One (of many possible) example(s) is:\n",
+    "[p[0] for p in people if p[1] == max([p[1] for p in people])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# min age\n",
+    "[p[0] for p in people if p[1] == min([p[1] for p in people])]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
