--- a/notebooks/1.4 Date and Time Handling.ipynb
+++ b/notebooks/1.4 Date and Time Handling.ipynb
@@ -7,7 +7,7 @@
     "# Date and Time Handling\n",
     "Main module documentation: https://docs.python.org/3/library/datetime.html\n",
     "\n",
-    "Dates/times are difficult to work with (initially).  The sooner that you learn to use the datetime module (strptime() and strftime(), in particular), the better off you will be!  Just remember: strp --> \"string parse\" and strf --> \"string format.\n",
+    "Dates/times are difficult to work with (initially).  The sooner that you learn to use the datetime module (strptime() and strftime(), in particular), the better off you will be!  Just remember: strp --> \"string parse\" and strf --> \"string format.\"\n",
     "\n"
    ]
   },
@@ -50,6 +50,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "type(rightnow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Creating a datetime object using date\n",
     "d = datetime.datetime(2019, 9, 23, 15, 23, 12)\n",
     "d"
@@ -59,7 +68,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Converting strings to datetime objects - strptime()"
+    "### Converting strings to datetime objects - strptime()\n",
+    "\n",
+    "Think \"string parse\" - strptime"
    ]
   },
   {
@@ -89,7 +100,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convertime datetime objects to strings - strftime()"
+    "### Convertime datetime objects to strings - strftime()\n",
+    "\n",
+    "Think \"string format\" - strftime"
    ]
   },
   {
