--- a/notebooks/2.0 Introduction to NumPy.ipynb
+++ b/notebooks/2.0 Introduction to NumPy.ipynb
@@ -13,9 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.19.2'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# import the NumPy module and display the version number\n",
     "import numpy as np\n",
@@ -45,9 +56,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example function call:\n",
+      "  Dimension: 1\n",
+      "       Size: 5\n",
+      "      Shape: (5,)\n",
+      "  Data Type: int32\n",
+      "  Item Size: 4\n",
+      "Data Buffer: <memory at 0x000001C2A24CCAC0>\n",
+      "The data:\n",
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a function to display the array attributes and data (optinally).  \n",
     "#  Note the use of the default value for the show_data parameter.  Made\n",
