Update 1.3 Sets, Tuples, Functions, Files.ipynb
Fixed a typo.

--- a/notebooks/1.3 Sets, Tuples, Functions, Files.ipynb
+++ b/notebooks/1.3 Sets, Tuples, Functions, Files.ipynb
@@ -161,7 +161,7 @@
    "source": [
     "# Unlike lists, tuples are immutable\n",
     "t[3] = 'cat'\n",
-    "# This can make them usefule if you want to guarantee that the values can't be changed"
+    "# This can make them useful if you want to guarantee that the values can't be changed"
    ]
   },
   {
@@ -460,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
