Update Homework 3 Assignment.ipynb
Uncommented the pandas import (it's needed).

--- a/notebooks/Homework 3 Assignment.ipynb
+++ b/notebooks/Homework 3 Assignment.ipynb
@@ -23,7 +23,7 @@
     "# Some setup ...\n",
     "# Import some tools\n",
     "import numpy as np\n",
-    "# import pandas as pd\n",
+    "import pandas as pd\n",
     "\n",
     "# function to show a NumyPy arrray with its attributes\n",
     "def show(the_array, show_data = 0):\n",
@@ -225,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
