--- a/notebooks/2.0 Introduction to NumPy.ipynb
+++ b/notebooks/2.0 Introduction to NumPy.ipynb
@@ -334,7 +334,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### More on reshaping and np.newaxis"
+    "### More on reshaping and np.newaxis\n",
+    "\n",
+    "The concept of \"axes\" is one of the more confusing aspects of NumPy.  Axes are used throughout the NumPy-based ecosystem -- notebly for us Pandas and Matplotlib, so you need to know them.  Lots and lots of online material.  I found this one particularly easy to understand - https://www.sharpsightlabs.com/blog/numpy-axes-explained/"
    ]
   },
   {
@@ -800,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
