Update 2.0 Introduction to NumPy.ipynb
Added a few more cells and comments.

--- a/notebooks/2.0 Introduction to NumPy.ipynb
+++ b/notebooks/2.0 Introduction to NumPy.ipynb
@@ -442,6 +442,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Show the 2D array x2\n",
+    "x2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# slice example - upper-left 2x3 sub-matrix\n",
     "# :2 - rows 0, 1\n",
     "# :3 - columns 0, 1, 2\n",
@@ -519,14 +529,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Monte Carlo Example"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Axes and Aggregate Functions"
+    "## Axes and Aggregate Functions\n",
+    "\n",
+    "Also check notebook 02.04 - Aggregations: Min, Max, and Everything Inbetween from Vanderplas"
    ]
   },
   {
@@ -555,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sum along an axis\n",
+    "# Sum along an axis -- What is axis 0?\n",
     "a.sum(axis=0)"
    ]
   },
@@ -565,7 +570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sum along the other axis\n",
+    "# Sum along the other axis -- What is axis 1\n",
     "a.sum(axis=1)"
    ]
   },
@@ -585,9 +590,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# or\n",
+    "# or - we can sum along an axis and then divide by the\n",
+    "# number of elements along that axis.\n",
     "ax = 0\n",
     "a.sum(axis=ax)[2]/a.shape[ax]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How did that work now?  Look at the components individually\n",
+    "a.sum(axis=ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.shape"
    ]
   },
   {
@@ -776,6 +801,13 @@
    "outputs": [],
    "source": [
     "plt.scatter?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Monte Carlo Example - Video Module"
    ]
   },
   {
