Initial updates for 2021
Updates of the Pandas and other material.

--- a/notebooks/3.1 Concatenating, Appending, Joining DataFrames.ipynb
+++ b/notebooks/3.1 Concatenating, Appending, Joining DataFrames.ipynb
@@ -250,7 +250,7 @@
    "source": [
     "## Joins\n",
     "\n",
-    "Implements a subset of <em>relational algebra</em>.  If you have a database background, you will recognize this topic.  If not, we'll do a quick run-through here and will then circle back later in the semester when we get to the MySQL component."
+    "Implements a subset of <em>relational algebra</em>.  If you have a database background, you will recognize this topic.  If not, we'll do a quick run-through here and will provide some links/referenes for further information."
    ]
   },
   {
@@ -362,8 +362,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Order-Item-SKU Example - Moved to separate Notebook"
+    "## Order-Item-SKU Example - Moved to separate Notebook - Order List Example Using Pandas Joins"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -382,9 +389,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
