--- a/notebooks/Sample Datasets.ipynb
+++ b/notebooks/Sample Datasets.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# Grab a data set using the key and show the first few rows\n",
-    "fkey = \"usecon\"\n",
+    "fkey = \"matches\"\n",
     "df = pd.read_csv(\"../data/\"+fnames[fkey])\n",
     "show(df)\n",
     "df.head()"
@@ -105,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
