Update 3.0 Introduction to Pandas.ipynb
More minor tweaks.

--- a/notebooks/3.0 Introduction to Pandas.ipynb
+++ b/notebooks/3.0 Introduction to Pandas.ipynb
@@ -762,9 +762,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# What is the column that is returned\n",
+    "type(data.area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# lists of columns -- note that you can specify the order and note\n",
     "# the double brackets.\n",
     "data[['pop', 'area']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and what is the type of the returned object?\n",
+    "type(data[['pop', 'area']])"
    ]
   },
   {
