--- a/notebooks/3.0 Introduction to Pandas.ipynb
+++ b/notebooks/3.0 Introduction to Pandas.ipynb
@@ -316,6 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a second series with geographical area\n",
     "area_dict = {'California': 423967, 'Texas': 695662, 'New York': 141297,\n",
     "             'Florida': 170312, 'Illinois': 149995}\n",
     "area = pd.Series(area_dict)\n",
