Update 3.0 Introduction to Pandas.ipynb
Fixed a couple of legacy errors in the comments/markdown.

--- a/notebooks/3.0 Introduction to Pandas.ipynb
+++ b/notebooks/3.0 Introduction to Pandas.ipynb
@@ -588,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Indexers - loc, iloc, and (what used to be) ix"
+    "## Indexers - loc and iloc"
    ]
   },
   {
@@ -944,7 +944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## See Sample Data Indexing and Selection Examples Notebook"
+    "## See Data Indexing and Selection Examples notebook for more examples of indexing and data selection."
    ]
   },
   {
