--- a/notebooks/3.0 Introduction to Pandas.ipynb
+++ b/notebooks/3.0 Introduction to Pandas.ipynb
@@ -572,6 +572,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "indA.intersection(indB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "indA | indB  # union"
    ]
   },
@@ -581,7 +590,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "indA.union(indB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "indA ^ indB  # symmetric difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indA.symmetric_difference(indB)"
    ]
   },
   {
@@ -1028,7 +1055,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
