Update 3.0 Introduction to Pandas.ipynb
Reorganized a few sections and added comments.

--- a/notebooks/3.0 Introduction to Pandas.ipynb
+++ b/notebooks/3.0 Introduction to Pandas.ipynb
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Series as Generalized NumPy Arrays"
+    "### Series as Generalized NumPy Arrays and Generalized Python Dictionaries"
    ]
   },
   {
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Series as Generalized Python Dictionaries"
+    "#### Creating a Series from a Dictionary"
    ]
   },
   {
@@ -372,7 +372,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Closer look at the DataFrame components and respective data types\n",
+    "# Closer look at the DataFrame components and respective data types (note that these are they things\n",
+    "# that are shown using the show() function.)\n",
     "states.index"
    ]
   },
@@ -563,7 +564,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "indA & indB  # intersection"
+    "indA & indB  # intersection\n",
+    "# Depending on your version of Python, may cause a \"Deprecation Warning\""
    ]
   },
   {
@@ -615,7 +617,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Indexers - loc and iloc"
+    "## Indexers - loc and iloc\n",
+    "\n",
+    "<span style=\"color:red\">This is important and confusing -- at first</span>"
    ]
   },
   {
@@ -1055,7 +1059,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
