--- a/notebooks/3.2 Pandas Time Series Modeling.ipynb
+++ b/notebooks/3.2 Pandas Time Series Modeling.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Two reference notebooks: \n",
     "1. Notebook 03.11 Working with Time Series from VanderPlas' book\n",
-    "2. Notebook 1.3 Miscellaneous Python Topics from our class repository"
+    "2. Notebook 1.4 Date and Time Handling from our class repository"
    ]
   },
   {
@@ -195,9 +195,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
