Added Join cells and rain data file

--- a/notebooks/3.1 Concatenating, Appending, Joining DataFrames.ipynb
+++ b/notebooks/3.1 Concatenating, Appending, Joining DataFrames.ipynb
@@ -291,6 +291,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pd.concat([x, y], sort=False, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# With a join, we want something different -- we want to join rows that have a common\n",
     "# key value so that we can use columns from both sets.\n",
     "#\n",
@@ -305,7 +314,7 @@
    "outputs": [],
    "source": [
     "# try inner, left, right, outer joins\n",
-    "pd.merge(x, y, how=\"inner\")"
+    "pd.merge(x, y, how=\"outer\")"
    ]
   },
   {
@@ -333,7 +342,7 @@
    "outputs": [],
    "source": [
     "# again, test with inner, left, right, outer -- in all combinations\n",
-    "pd.merge(z,pd.merge(x, y, how=\"inner\"), how=\"inner\")"
+    "pd.merge(pd.merge(x, y, how=\"inner\"), z, how=\"inner\")"
    ]
   },
   {
@@ -344,7 +353,7 @@
    "source": [
     "# What if I have multiple instances of a key value?\n",
     "# Create a third data frame with a common column ('A')\n",
-    "z = pd.DataFrame({'A' : [100, 100, 100, 2000], 'D' : [9,6,4,18]})\n",
+    "z = pd.DataFrame({'A' : [100, 100, 100, 2700, 100], 'D' : [9,6,4,18, 16]})\n",
     "z"
    ]
   },
@@ -355,7 +364,7 @@
    "outputs": [],
    "source": [
     "# Many-to-one relationship\n",
-    "pd.merge(z,pd.merge(x, y, how=\"inner\"), how=\"inner\")"
+    "pd.merge(pd.merge(x, y, how=\"inner\"), z, how=\"inner\")"
    ]
   },
   {
