Update 3.1 Concatenating, Appending, Joining DataFrames.ipynb
Added some additional join-related material.

--- a/notebooks/3.1 Concatenating, Appending, Joining DataFrames.ipynb
+++ b/notebooks/3.1 Concatenating, Appending, Joining DataFrames.ipynb
@@ -314,7 +314,17 @@
    "outputs": [],
    "source": [
     "# try inner, left, right, outer joins\n",
-    "pd.merge(x, y, how=\"outer\")"
+    "pd.merge(x, y, how=\"inner\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note that when you flip the order of arguments, x and y, you flip the mapping of left and right\n",
+    "pd.merge(y, x, how=\"right\")"
    ]
   },
   {
@@ -346,14 +356,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Many-to-one relationships"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# What if I have multiple instances of a key value?\n",
-    "# Create a third data frame with a common column ('A')\n",
+    "# Create a third data frame with a common column ('A') and multiple records with the same A values\n",
     "z = pd.DataFrame({'A' : [100, 100, 100, 2700, 100], 'D' : [9,6,4,18, 16]})\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.merge(x, y, how=\"inner\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Many-to-one relationship\n",
+    "pd.merge(pd.merge(x, y, how=\"inner\"), z, how=\"inner\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and we can have an aribitrary number of records with different join (key) values\n",
+    "z = pd.DataFrame({'A' : [100, 100, 100, 2700, 100, 500, 200, 200, 300, 200], 'D' : [9,6,4,18, 16, 22, 78, 19, 23, 42]})\n",
     "z"
    ]
   },
