--- a/notebooks/Aggregation and Grouping - Another Example.ipynb
+++ b/notebooks/Aggregation and Grouping - Another Example.ipynb
@@ -288,6 +288,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#What is this groupby thing?\n",
+    "tips.groupby('day')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How does its iterator work?\n",
+    "for (day, group) in tips.groupby('day'):\n",
+    "    print(\"\\n\\nNew iteration of the loop:\")\n",
+    "    print(day, type(day))\n",
+    "    print(type(group), group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -307,9 +348,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
