--- a/notebooks/Aggregation and Grouping - Another Example.ipynb
+++ b/notebooks/Aggregation and Grouping - Another Example.ipynb
@@ -7,7 +7,7 @@
     "# Aggregation and Grouping - Another Example\n",
     "The VanderPlas book/notebook uses the planets data from Seaborn.  I'm going to do another example using the tips data (I've been a waiter at two restaurants, so this one was particularly interesting!).\n",
     "\n",
-    "Video module based on this notebook: http://jsmith.co/node/256"
+    "Video module based on this notebook (\"Aggregation and Grouping\"): https://jsmith.co/educational-modules/analytics-course-modules/python-related-videos/"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
