Update SCPAY Aggregation and Grouping Example.ipynb
More examples, more comments.

--- a/notebooks/SCPAY Aggregation and Grouping Example.ipynb
+++ b/notebooks/SCPAY Aggregation and Grouping Example.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "25177f38-a941-4b2a-9e4b-701ec0c78388",
    "metadata": {},
    "source": [
-    "# Aggregation and Grouping Example - South Carolina Pay Dataset"
+    "# Aggregation and Grouping Example - South Carolina Pay Dataset\n",
+    "\n",
+    "Demonstration of querying the dataset for \"interesting\" information.  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e714348-eccd-4b3b-bd46-fe9b9a4edbc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,41 +30,139 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d73cf75-7190-4163-9e52-f9dafa32296d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read the dataset into a data frame (df)\n",
     "df = pd.read_csv(\"../data/04_South_Carolina_State_Employee_Salary_Database.csv\")\n",
     "show(df)\n",
-    "df.head()"
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using the whole dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c7d7471-faa8-4890-ac7e-ee31d727fc53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Average salary\n",
+    "df['Base Salary'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Human-friendly form\n",
+    "\"Average salary: ${:,.2f}\".format(df['Base Salary'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Medians are often more informing for highly skewed data\n",
+    "\"Median salary: ${:,.2f}\".format(df['Base Salary'].median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Percentiles can also be very useful\n",
+    "p = 0.75\n",
+    "\"{:}th percentile salary: ${:,.2f}\".format(int(p*100),df['Base Salary'].quantile(p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Aggregation and Grouping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Average salary by Agency\n",
-    "df.groupby('Agency')[['Base Salary']].mean()\n"
+    "df.groupby('Agency')[['Base Salary']].mean()\n",
+    "# Split-apply-combine -- see slide."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ee7b537-9244-4efb-a66e-6560953d95e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Who pays the most?  Top 10\n",
-    "df.groupby('Agency')[['Base Salary']].mean().sort_values(by='Base Salary', ascending=False)[:10]"
+    "# Who pays the most?  Top 10 (of the 96 agencies)\n",
+    "df.groupby('Agency')[['Base Salary']].mean().sort_values(by='Base Salary', ascending=False)[:10]\n",
+    "# how does this expression work? Split-apply-combine + sort + slice"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8efd5970-1210-49eb-9584-2ca280bca71b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Who are those Retirement System people?\n",
+    "df[df['Agency']==\"RETIREMENT SYS INVESTMENT COMM\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort those retirement people\n",
+    "df[df['Agency']==\"RETIREMENT SYS INVESTMENT COMM\"].sort_values(by='Base Salary', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Average may be deceiving -- let's check the median\n",
+    "avg = df[df['Agency']==\"RETIREMENT SYS INVESTMENT COMM\"]['Base Salary'].mean()\n",
+    "med = df[df['Agency']==\"RETIREMENT SYS INVESTMENT COMM\"]['Base Salary'].median()\n",
+    "\"Average: ${:,.2f}; Median: ${:,.2f}\".format(avg, med)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What about Total Compensation?\n",
+    "avg = df[df['Agency']==\"RETIREMENT SYS INVESTMENT COMM\"]['Total Compensation'].mean()\n",
+    "med = df[df['Agency']==\"RETIREMENT SYS INVESTMENT COMM\"]['Total Compensation'].median()\n",
+    "\"Average: ${:,.2f}; Median: ${:,.2f}\".format(avg, med)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,29 +173,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f28e1e8-ba59-4897-9589-09dc5fa941fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# By job title - Who pays the most?  Top 10\n",
-    "df.groupby('Title')[['Base Salary']].mean().sort_values(by='Base Salary', ascending=False)[:10]"
+    "# By job title - Who pays the most?  Top 20\n",
+    "df.groupby('Title')[['Base Salary']].mean().sort_values(by='Base Salary', ascending=False)[:20]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db4b7118-a781-4f98-8c69-f0eb18203f5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# By job title - Who pays the least?  Top 10\n",
-    "df.groupby('Title')[['Base Salary']].mean().sort_values(by='Base Salary', ascending=False)[-10:]"
+    "# Who are these Vice Provost people?\n",
+    "df[df['Title'] == \"VICE PROVOST\"].sort_values(by='Base Salary', ascending=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64a65bbf-c159-4925-b0b9-d80b47ecb48d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# By job title - Who pays the least?  Bottom 20\n",
+    "df.groupby('Title')[['Base Salary']].mean().sort_values(by='Base Salary', ascending=False)[-20:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +213,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd04f36b-1f9e-4946-92cd-28ab868e4d7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Top n professors (by pay :-))\n",
+    "n = 25\n",
+    "df[df['Title']=='PROFESSOR'].sort_values(by='Base Salary', ascending=False)[:n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bottom n professors (by pay :-))\n",
+    "n = 25\n",
+    "df[df['Title']=='PROFESSOR'].sort_values(by='Base Salary', ascending=False)[-n:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -130,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
