Update 3.2 Pandas Time Series Modeling.ipynb
Added note to check the Vander Plas Notebook

--- a/notebooks/3.2 Pandas Time Series Modeling.ipynb
+++ b/notebooks/3.2 Pandas Time Series Modeling.ipynb
@@ -172,6 +172,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Indexing by Time - Pandas Time Series -- see Vander Plas Notebook 03.11"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
