--- a/notebooks/Questions From Class.ipynb
+++ b/notebooks/Questions From Class.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cfc26e36-81b4-47d3-98c9-7352664c95bf",
    "metadata": {},
    "source": [
     "### 2021-10-13\n",
@@ -13,8 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ac79dd35-096c-4bff-9725-c4c83f63d04c",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "07a96ab9-acc1-4f86-8fd8-3da4ab8f55b5",
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'one': 1, 'two': 2, 'three': [1, 2, 3], 'four': 'fourth arguement'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = {'one':1, 'two':2, 'three':[1, 2, 3], 'four':'fourth arguement'}\n",
     "d"
@@ -37,10 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "66d0350e-584b-4947-b01a-95de5ab528bd",
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "myfun() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-e0ccf774e904>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Sending the dictionary itself does not work\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmyfun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: myfun() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
    "source": [
     "# Sending the dictionary itself does not work\n",
     "myfun(d)"
@@ -48,10 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "75efb9cb-3b7b-4025-8e52-8dd52ea0c235",
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'one': 1, 'two': 2, 'three': [1, 2, 3], 'four': 'fourth arguement'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Must send the unpacked (**) dictionary\n",
     "myfun(**d)"
@@ -59,10 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "459b533c-14a3-4739-9555-341ea82814c6",
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dog': 18, 'cat': 27, 'final_list': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Using an anonmyous dictionary as the arguement\n",
     "myfun(**{'dog':18, 'cat':27,'final_list':[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]})"
@@ -70,8 +103,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'one': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now using the more familar key=value form\n",
+    "myfun(one=1, two)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "40e11a63-0cd3-4800-9891-29186478738b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -79,7 +129,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
